--- a/back-end-example/package.json
+++ b/back-end-example/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "express-middleware",
+  "name": "dockerized-back-end",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "seed": "node src/seed.js"
   },
   "keywords": [],
   "author": "",
